# cmake_demo

./: README.md
android/: CMakeLists.txt  compile.bat  main.c
build_type/: CMakeLists.txt  compile.bat
configure/: CMakeLists.txt  main.c  myname.h  myname.h.in  version.h.in
multi_cmake/: CMakeLists.txt  compile.bat
multi_cmake/lib/: CMakeLists.txt
multi_source/: CMakeLists.txt  compile.bat  lib.c
multifiles/: CMakeLists.txt  main.c
multifiles/hello/: hello.c
outputpath/: CMakeLists.txt  compile.bat  main.c
simple/: CMakeLists.txt
